// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process should provide a sourcemap if requested 1`] = `
Object {
  "code": "'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var noop3 = require('noop3');
var url = require('url');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

var noop3__default = /*#__PURE__*/_interopDefaultLegacy(noop3);

const foo =  42;

Object.defineProperty(exports, 'noop', {
    enumerable: true,
    get: function () {
        return noop3__default['default'];
    }
});
Object.defineProperty(exports, 'URL', {
    enumerable: true,
    get: function () {
        return url.URL;
    }
});
exports.foo = foo;
",
  "map": SourceMap {
    "file": "null.js",
    "mappings": ";;;;;;;;;;;AACoB,MAAC,GAAG,IAAI;;;;;;;;;;;;;;;;",
    "names": Array [],
    "sources": Array [
      "null.js",
    ],
    "sourcesContent": Array [
      "
        export const foo =  42
        export {default as noop} from 'noop3'
        export {URL} from 'url'
    ",
    ],
    "version": 3,
  },
}
`;

exports[`process should transform 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var noop3 = require('noop3');
var url = require('url');

function _interopDefaultLegacy (e) { return e && typeof e === 'object' && 'default' in e ? e : { 'default': e }; }

var noop3__default = /*#__PURE__*/_interopDefaultLegacy(noop3);

const foo =  42;

Object.defineProperty(exports, 'noop', {
    enumerable: true,
    get: function () {
        return noop3__default['default'];
    }
});
Object.defineProperty(exports, 'URL', {
    enumerable: true,
    get: function () {
        return url.URL;
    }
});
exports.foo = foo;
"
`;

exports[`process should transform relative imports 1`] = `
"'use strict';

const foo = 42;

console.log(foo);
"
`;
